--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -9,7 +9,7 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="#">Packages</a></li>
+                    <li><a href="{% url 'packages:package_list' %}">Packages</a></li>
                 </ul>
             </div>
             <div class="footer-section">
