--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,10 +9,10 @@
                 <li><a href="{% url 'packages:package_list' %}">Packages</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="{% url 'account_logout' %}">Logout</a></li>
                 {% else %}
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="{% url 'account_login' %}">Login</a></li>
+                <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
                 {% endif %}
             </ul>
         </div>
