--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -8,7 +8,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url 'packages:package_list' %}">Packages</a></li>
                 {% if user.is_authenticated %}
-                <li><a href="#">Profile</a></li>
+                <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'account_logout' %}">Logout</a></li>
                 {% else %}
                 <li><a href="{% url 'account_login' %}">Login</a></li>
