--- a/templates/packages/package_detail.html
+++ b/templates/packages/package_detail.html
@@ -9,11 +9,11 @@
         <div class="package-detail-grid">
             <div class="package-detail-image">
                 {% if package.image %}
-                    <img src="{{ package.image.url }}" alt="{{ package.name }}">
+                <img src="{{ package.image.url }}" alt="{{ package.name }}">
                 {% else %}
-                    <div class="package-placeholder">
-                        <p>{{ package.get_category_display }}</p>
-                    </div>
+                <div class="package-placeholder">
+                    <p>{{ package.get_category_display }}</p>
+                </div>
                 {% endif %}
             </div>
             <div class="package-detail-info">
@@ -21,7 +21,7 @@
                 <h1>{{ package.name }}</h1>
                 <p class="package-price">€{{ package.price }}</p>
                 <p class="package-description">{{ package.description }}</p>
-                
+
                 <div class="package-meta">
                     <div class="meta-item">
                         <strong>Delivery Time:</strong> {{ package.delivery_time }}
@@ -35,17 +35,18 @@
                     <h3>What's Included:</h3>
                     <ul>
                         {% for feature in package.get_features_list %}
-                            <li>{{ feature }}</li>
+                        <li>{{ feature }}</li>
                         {% endfor %}
                     </ul>
                 </div>
 
                 {% if user.is_authenticated %}
-                    <a href="#" class="btn btn-primary btn-large">Purchase Now</a>
+                <a href="{% url 'orders:checkout' package.pk %}" class="btn btn-primary btn-large">Purchase Now</a>
                 {% else %}
-                    <a href="#" class="btn btn-primary btn-large">Login to Purchase</a>
+                <a href="{% url 'account_login' %}?next={% url 'packages:package_detail' package.pk %}"
+                    class="btn btn-primary btn-large">Login to Purchase</a>
                 {% endif %}
-                
+
                 <a href="{% url 'packages:package_list' %}" class="btn btn-secondary">Back to Packages</a>
             </div>
         </div>
