--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="profile-actions">
-            <a href="#" class="btn btn-secondary">View Order History</a>
+            <a href="{% url 'order_history' %}" class="btn btn-secondary">View Order History</a>
         </div>
     </div>
 </section>
