feat: add seo meta tags

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,6 +3,12 @@
 
 {% block title %}David Visuals - Professional Graphic Design Services{% endblock %}
 
+{% block meta_description %}Get professional graphic design services at transparent fixed prices. Logos from €49, social
+media graphics from €59, and flyers from €79. Fast delivery guaranteed.{% endblock %}
+
+{% block meta_keywords %}graphic design services, affordable logo design, social media graphics, flyer design, poster
+design, branding services, fixed price design{% endblock %}
+
 {% block content %}
 <section class="hero">
     <div class="container">
