--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,42 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional graphic design services - logos, social media graphics, and promotional materials at fixed prices">
-    <meta name="keywords" content="graphic design, logo design, social media graphics, flyer design, poster design">
+    <meta name="description"
+        content="{% block meta_description %}Professional graphic design services at fixed prices. Logos, social media graphics, flyers, and posters delivered fast with quality guaranteed.{% endblock %}">
+    <meta name="keywords"
+        content="{% block meta_keywords %}graphic design, logo design, social media graphics, flyer design, poster design, branding, design services, fixed price design{% endblock %}">
     <meta name="author" content="David Visuals">
+    <meta property="og:title"
+        content="{% block og_title %}David Visuals - Professional Graphic Design Services{% endblock %}">
+    <meta property="og:description"
+        content="{% block og_description %}Professional graphic design services at fixed prices. Quality designs delivered fast.{% endblock %}">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ request.build_absolute_uri }}">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title"
+        content="{% block twitter_title %}David Visuals - Professional Graphic Design Services{% endblock %}">
+    <meta name="twitter:description"
+        content="{% block twitter_description %}Professional graphic design services at fixed prices. Quality designs delivered fast.{% endblock %}">
     <title>{% block title %}David Visuals - Professional Graphic Design Services{% endblock %}</title>
-    {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
     {% include 'includes/navbar.html' %}
 
     <main>
         {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                    <div class="message {{ message.tags }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
+        <div class="messages">
+            {% for message in messages %}
+            <div class="message {{ message.tags }}">
+                {{ message }}
             </div>
+            {% endfor %}
+        </div>
         {% endif %}
 
         {% block content %}
@@ -33,4 +48,5 @@
     <script src="{% static 'js/script.js' %}"></script>
     {% block extra_js %}{% endblock %}
 </body>
+
 </html>
