--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -19,7 +19,7 @@
             </div>
             <div class="footer-section">
                 <h3>Newsletter</h3>
-                <form method="POST" action="#" class="newsletter-form">
+                <form method="POST" action="{% url 'newsletter:subscribe' %}" class="newsletter-form">
                     {% csrf_token %}
                     <input type="email" name="email" placeholder="Your email" required>
                     <button type="submit">Subscribe</button>
