--- a/templates/base.html
+++ b/templates/base.html
@@ -29,18 +29,18 @@
     {% include 'includes/navbar.html' %}
 
     <main>
-        {% if messages %}
-        <div class="messages">
+        <div class="container">
+            {% if messages %}
             {% for message in messages %}
-            <div class="message {{ message.tags }}">
+            <div class="alert alert-{{ message.tags }}">
                 {{ message }}
             </div>
             {% endfor %}
-        </div>
-        {% endif %}
+            {% endif %}
 
-        {% block content %}
-        {% endblock %}
+            {% block content %}
+            {% endblock %}
+        </div>
     </main>
 
     {% include 'includes/footer.html' %}
