--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,20 +1,22 @@
+{% load static %}
 <header>
-    <nav class="navbar">
-        <div class="container">
-            <div class="nav-brand">
-                <a href="/">David Visuals</a>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="/">Home</a></li>
+    <div class="container">
+        <nav>
+            <a href="{% url 'home:index' %}" class="logo">David Visuals</a>
+            <ul class="nav-links">
+                <li><a href="{% url 'home:index' %}">Home</a></li>
                 <li><a href="{% url 'packages:package_list' %}">Packages</a></li>
                 {% if user.is_authenticated %}
-                <li><a href="{% url 'profile' %}">Profile</a></li>
+                <li><a href="{% url 'profiles:profile' %}">Profile</a></li>
+                {% if user.is_staff %}
+                <li><a href="{% url 'admin:index' %}">Admin</a></li>
+                {% endif %}
                 <li><a href="{% url 'account_logout' %}">Logout</a></li>
                 {% else %}
                 <li><a href="{% url 'account_login' %}">Login</a></li>
                 <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
                 {% endif %}
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </div>
 </header>
