--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -11,10 +11,14 @@
                 <ul class="footer-links">
                     <li><a href="{% url 'home:index' %}">Home</a></li>
                     <li><a href="{% url 'packages:package_list' %}">Packages</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'profiles:profile' %}">Profile</a></li>
+                    {% endif %}
                 </ul>
             </div>
             <div class="footer-section">
                 <h4>Newsletter</h4>
+                <p>Subscribe to get updates on new packages and special offers.</p>
                 <form method="post" action="{% url 'newsletter:subscribe' %}" class="newsletter-form">
                     {% csrf_token %}
                     <input type="email" name="email" placeholder="Your email" required class="newsletter-input">
