feat: add Facebook link to footer

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -17,6 +17,12 @@
                 </ul>
             </div>
             <div class="footer-section">
+                <h4>Follow Us</h4>
+                <ul class="footer-links">
+                    <li><a href="https://www.facebook.com/people/David-Visuals/61586669439949/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
                 <h4>Newsletter</h4>
                 <p>Subscribe to get updates on new packages and special offers.</p>
                 <form method="post" action="{% url 'newsletter:subscribe' %}" class="newsletter-form">
